# Ergodic-Insurance-Limits

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CC Prompts 2.md  CC Prompts.md  CHANGELOG.md  CLAUDE.md  CONFIG_MIGRATION_PLAN.md  CONFIG_MIGRATION_TASKS.md  Financial Modeling Framework - Initial.md  Financial Modeling Framework - Spec.md  GEMINI.md  Gemfile  NOTEBOOK_EXECUTION_FIX.md  PYTEST_EXECUTION_FIX.md  README.md  SPEC_10_FREQUENCY.md  SPRINT_01_ISSUES.md  _config.yml  coverage.md  debug_batch.py  debug_insurance.py  fix_collapsed_headers.py  fix_collapsed_headers2.py  fix_final_anchors.py  fix_remaining_warnings.py  fix_stochastic_control_section.py  generate_docs_images.py  index.html  index.md  issue_38_enhancement.md  main.py  mypy.ini  pyproject.toml  setup.py  test_architecture_plot.py  test_heatmap_axes.py  test_migration.py  test_nb_fix.py  test_notebooks.py  (+6 more)
ergodic_insurance/: .pylintrc  MANIFEST.in  README.md  TEST_COVERAGE_IMPROVEMENTS.md  US_FINANCIAL_STATEMENTS_RESEARCH.md  __init__.py  _compare_strategies.py  _run_analysis.py  _warnings.py  accrual_manager.py  accuracy_validator.py  adaptive_stopping.py  batch_processor.py  benchmarking.py  bootstrap_analysis.py  business_optimizer.py  claim_development.py  claim_generator.py  claim_liability.py  config.py  config_compat.py  config_loader.py  config_manager.py  config_migrator.py  config_v2.py  convergence.py  convergence_advanced.py  convergence_plots.py  decimal_utils.py  decision_engine.py  ergodic_analyzer.py  ergodic_types.py  ergodicity_basic_simulation_error_checks.ipynb  excel_reporter.py  execute_all_notebooks.py  execute_notebook.py  exposure_base.py  financial_statements.py  gpu_backend.py  gpu_mc_engine.py  (+51 more)
ergodic_insurance/config/: __init__.py  constants.py  core.py  exceptions.py  insurance.py  manufacturer.py  market.py  optimizer.py  presets.py  reporting.py  simulation.py  utils.py
ergodic_insurance/docs/: Makefile  README.md  build_docs.bat  build_mermaid_diagrams.py  changelog.rst  check_math.py  conf.py  config_best_practices.md  contributing.rst  ergodic_theory.rst  examples.rst  fix_concatenated_sections.py  fix_latex_rendering.py  fix_math_and_code.py  fix_unclosed_math.py  getting_started.rst  glossary.rst  index.rst  index_v2.rst  installation.rst  insurance_optimization.rst  make.bat  migration_guide.md  overview.rst  prerender_mermaid.py  quick_start.rst  requirements.txt  restore_math_blocks.py  risk_metrics.rst  theory.rst
ergodic_insurance/ergodic_insurance.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ergodic_insurance/examples/: __init__.py  __main__.py  benchmark_parallel.py  demo_claim_development.py  demo_collateral_management.py  demo_config_practical.py  demo_config_v2.py  demo_excel_reports.py  demo_insurance_pricing.py  demo_manufacturer.py  demo_stochastic.py  improved_retention_optimization.py  simple_retention_optimization.py  test_notebook_comprehensive.py  test_notebook_fixes.py  test_smart_annotations.py
ergodic_insurance/notebooks/: 00_config_migration_example.ipynb  00_notebook_executioner.ipynb  00_setup_verification.ipynb  01_basic_manufacturer.ipynb  01_basic_manufacturer_executed.ipynb  02_long_term_simulation.ipynb  02_long_term_simulation_light.ipynb  03_growth_dynamics.ipynb  04_ergodic_demo.ipynb  05_risk_metrics.ipynb  06_loss_distributions.ipynb  06_risk_metrics.ipynb  07_insurance_layers.ipynb  08_monte_carlo_analysis.ipynb  08_optimization_results.ipynb  09_optimization_results.ipynb  09_pareto_analysis.ipynb  09_sensitivity_analysis.ipynb  10_sensitivity_analysis.ipynb  11_pareto_analysis.ipynb  12_hjb_optimal_control.ipynb  13_sensitivity_analysis.ipynb  13_walk_forward_validation.ipynb  14_visualization_factory_demo.ipynb  14_walk_forward_validation.ipynb  15_executive_visualization_demo.ipynb  15_roe_ruin_frontier_demo.ipynb  15_ruin_cliff_visualization.ipynb  15_visualization_factory_demo.ipynb  16_ruin_cliff_visualization.ipynb  17_executive_visualizations_showcase.ipynb  18_executive_visualization_demo.ipynb  19_table_generation_demo.ipynb  19_technical_convergence_visualizations.ipynb  20_ergodic_visualizations.ipynb  21_insurance_structure_visualizations.ipynb  22_advanced_convergence_monitoring.ipynb  22_report_generation_demo.ipynb  23_table_generation_demo.ipynb  24_scenario_comparison_demo.ipynb  (+14 more)
ergodic_insurance/reporting/: __init__.py  cache_manager.py  config.py  executive_report.py  formatters.py  insight_extractor.py  report_builder.py  scenario_comparator.py  table_generator.py  technical_report.py  validator.py
ergodic_insurance/scripts/: migrate_configs.py  setup_dev.py
ergodic_insurance/src/: __init__.py  accuracy_validator.py  adaptive_stopping.py  batch_processor.py  benchmarking.py  bootstrap_analysis.py  business_optimizer.py  claim_development.py  claim_generator.py  config.py  config_compat.py  config_loader.py  config_manager.py  config_v2.py  convergence.py  convergence_advanced.py  convergence_plots.py  decision_engine.py  ergodic_analyzer.py  excel_reporter.py  financial_statements.py  hjb_solver.py  insurance.py  insurance_pricing.py  insurance_program.py  loss_distributions.py  manufacturer.py  monte_carlo.py  optimal_control.py  optimization.py  parallel_executor.py  parameter_sweep.py  pareto_frontier.py  performance_optimizer.py  progress_monitor.py  result_aggregator.py  risk_metrics.py  ruin_probability.py  scenario_manager.py  sensitivity.py  (+10 more)
ergodic_insurance/tests/: HJB_TEST_COVERAGE_REPORT.md  PERFORMANCE_REPORT.md  REDUNDANCY_REPORT.md  REFACTOR_SUMMARY_2026_02_09.md  REFACTOR_SUMMARY_2026_02_17.md  REFACTOR_SURVEY.md  RELIABILITY_REPORT.md  TAUTOLOGY_REPORT.md  __init__.py  conftest.py  test_accrual_integration.py  test_accrual_manager.py  test_accuracy_validator.py  test_adaptive_stopping.py  test_autocorrelation_fft_380.py  test_balance_sheet_cash_depreciation.py  test_balance_sheet_classification.py  test_batch_processor.py  test_batch_processor_coverage.py  test_benchmarking.py  test_bootstrap.py  test_bootstrap_analysis_coverage.py  test_bootstrap_ci_seed_bug400.py  test_capex.py  (+177 more)
(+602 files in other folders)
