[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ergodic-insurance"
version = "0.3.0"
description = "Financial modeling for widget manufacturers with ergodic insurance limits"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Alex Filiakov", email = "alexfiliakov@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "scipy>=1.16.1",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "coverage>=7.7.0",
    "pytest-xdist>=3.8.0",
    "pylint>=3.3.8",
    "black>=25.1.0",
    "mypy>=1.17.1",
    "isort>=6.0.1",
    "types-PyYAML>=6.0.0",
    "pre-commit>=3.6.0",
    "hypothesis>=6.100.0",
]
notebooks = [
    "jupyter>=1.1.1",
    "notebook>=7.4.5",
    "ipykernel>=6.30.1",
    "nbformat>=5.10.4",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.coverage.run]
source = ["ergodic_insurance"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/conftest.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "except ImportError:",
    "pass",
]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.pylint.messages_control]
disable = ["fixme"]
