[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ergodic-insurance"
version = "0.4.2"
description = "Financial modeling for widget manufacturers with ergodic insurance limits"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Alex Filiakov", email = "alexfiliakov@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.2,<3.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "scipy>=1.16.1",
    "joblib>=1.3.2",
    "tqdm>=4.66.1",
    "pyarrow>=14.0.1",
    "h5py>=3.9.0",
    "psutil>=5.9.0",
    "plotly>=5.18.0",
    "jinja2>=3.1.0",
    "reportlab>=4.2.5",
    "markdown2>=2.5.2",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=64.0",
]
excel = [
    "xlsxwriter>=3.1.0",
    "openpyxl>=3.1.0",
]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "coverage>=7.7.0",
    "pytest-xdist>=3.8.0",
    "pylint>=3.3.8",
    "black>=25.1.0",
    "mypy>=1.17.1",
    "isort>=6.0.1",
    "types-PyYAML>=6.0.0",
    "types-tabulate>=0.9.0",
    "pre-commit>=3.6.0",
    "hypothesis>=6.100.0",
    "xlsxwriter>=3.1.0",
    "openpyxl>=3.1.0",
]
docs = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autodoc-typehints>=3.2.0",
    "myst-parser>=4.0.1",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-mermaid>=1.0.0",
]
notebooks = [
    "jupyter>=1.1.1",
    "notebook>=7.4.5",
    "ipykernel>=6.30.1",
    "nbformat>=5.10.4",
]

[project.urls]
Homepage = "https://github.com/AlexFiliakov/Ergodic-Insurance-Limits"
Repository = "https://github.com/AlexFiliakov/Ergodic-Insurance-Limits"
Issues = "https://github.com/AlexFiliakov/Ergodic-Insurance-Limits/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_third_party = ["numpy", "scipy", "pandas", "pytest", "matplotlib", "seaborn", "pydantic", "yaml", "joblib", "tqdm"]
known_first_party = ["ergodic_insurance"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_sort_within_sections = true

[tool.coverage.run]
source = ["ergodic_insurance"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/conftest.py",
    "*/setup.py",
    "*/visualization_legacy.py",
    "*/visualization/improved_tower_plot.py",
    "*/_version.py",
    "generate_docs_images.py",
    "update_docs_batch.py",
    "main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "except ImportError:",
    "pass",
]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.pylint.messages_control]
disable = [
    "fixme",
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0917",  # too-many-positional-arguments
    "W0212",  # protected-access
    "C0103",  # invalid-name (for single letter variables in math contexts)
    "C0301",  # line-too-long (handled by black formatter)
    "C0415",  # import-outside-toplevel (common pattern for optional imports)
    "W1203",  # logging-fstring-interpolation (f-strings in logging are fine)
    "W0611",  # unused-import (sometimes needed for type checking)
    "W0612",  # unused-variable (common in test fixtures)
    "W0613",  # unused-argument (common in interface implementations)
    "R0902",  # too-many-instance-attributes (financial models need many attributes)
    "R0904",  # too-many-public-methods (test classes often have many methods)
    "W0621",  # redefined-outer-name (common in pytest fixtures)
    "C1803",  # use-implicit-booleaness-not-comparison (explicit comparison is clearer)
    "E1101",  # no-member (false positives with numpy)
    "W1514",  # unspecified-encoding (not critical for config files)
    "W0122",  # exec-used (needed in setup.py)
    "R1732",  # consider-using-with (not always applicable)
    "E0401",  # import-error (h5py import issues in trajectory_storage)
]

[tool.pylint.format]
max-line-length = 100
max-module-lines = 2000

[tool.pylint.design]
max-args = 7
max-attributes = 10
max-locals = 45
max-returns = 14
max-branches = 15

[tool.pylint.similarities]
min-similarity-lines = 10

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["ergodic_insurance/_version.py:__version__"]
branch = "main"
build_command = "pip install build && python -m build"
commit_message = "chore(release): v{version}"
major_on_zero = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
upload_to_vcs_release = true
