[project]
name = "ergodic_insurance"
version = "0.1.0"
description = "Financial modeling for widget manufacturers with ergodic insurance limits"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "scipy>=1.16.1",
    "joblib>=1.3.2",
    "tqdm>=4.66.1",
    "pyarrow>=14.0.1",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-copybutton>=0.5.2",
    "myst-parser>=4.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
    "pylint>=3.3.8",
    "black>=25.1.0",
    "mypy>=1.17.1",
    "isort>=6.0.1",
    "types-PyYAML>=6.0.0",
]
notebooks = [
    "jupyter>=1.1.1",
    "notebook>=7.4.5",
    "ipykernel>=6.30.1",
    "nbformat>=5.10.4",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=2.4.4",
    "sphinx-rtd-theme>=3.0.2",
    "myst-parser>=4.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-napoleon>=0.7",
]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0917",  # too-many-positional-arguments
    "W0212",  # protected-access
    "C0103",  # invalid-name (for single letter variables in math contexts)
    "C0301",  # line-too-long (handled by black formatter)
    "C0415",  # import-outside-toplevel (common pattern for optional imports)
    "W1203",  # logging-fstring-interpolation (f-strings in logging are fine)
    "W0611",  # unused-import (sometimes needed for type checking)
    "W0612",  # unused-variable (common in test fixtures)
    "W0613",  # unused-argument (common in interface implementations)
    "R0902",  # too-many-instance-attributes (financial models need many attributes)
    "R0904",  # too-many-public-methods (test classes often have many methods)
    "W0621",  # redefined-outer-name (common in pytest fixtures)
    "C1803",  # use-implicit-booleaness-not-comparison (explicit comparison is clearer)
    "E1101",  # no-member (false positives with numpy)
    "W1514",  # unspecified-encoding (not critical for config files)
    "W0122",  # exec-used (needed in setup.py)
    "R1732",  # consider-using-with (not always applicable)
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 7
max-attributes = 10
max-locals = 20

[tool.pylint.similarities]
min-similarity-lines = 10

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_third_party = ["numpy", "scipy", "pandas", "pytest", "matplotlib", "seaborn", "pydantic", "yaml", "joblib", "tqdm"]
known_first_party = ["ergodic_insurance"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_sort_within_sections = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]
branch = false  # Explicitly disable branch coverage to avoid mismatch
parallel = true  # Enable parallel coverage collection

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# Documentation build configuration
[tool.sphinx]
source_dir = "docs"
build_dir = "docs/_build"

# Add sphinx-autobuild to docs extra dependencies
docs-extra = [
    "sphinx-autobuild>=2024.10.3",
    "sphinx-design>=0.6.1",
]
